--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "marcosbl/odtphp",
+    "name": "inforisorse/odtphp",
     "description": "ODT PHP templating system",
     "version": "1.0.0",
     "keywords": [
