--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "GPL-3.0",
     "type": "library",
-    "homepage": "https://github.com/marcosbl/odtphp",
+    "homepage": "https://github.com/inforisorse/odtphp",
     "require": {
         "php": ">=5.2.4"
     },
