--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "inforisorse/odtphp",
     "description": "ODT PHP templating system",
-    "version": "1.0.0",
+    "version": "dev-master",
     "keywords": [
         "odt",
         "php"
@@ -10,23 +10,12 @@
     "type": "library",
     "homepage": "https://github.com/inforisorse/odtphp",
     "require": {
-        "php": ">=5.2.4"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.*",
-        "scrutinizer/ocular": "~1.1",
-        "symfony/var-dumper": "^2.7"
+        "ext-zip": "*",
+        "php": ">=8.1"
     },
     "autoload": {
         "psr-4": {
-            "Odtphp\\": "src"
-        },
-        "files": ["lib/pclzip.lib.php"]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Odtphp\\Test\\": "tests"
-        },
-        "files": ["lib/pclzip.lib.php"]
+            "Inforisorse\\OdtPhp\\": "src"
+        }
     }
 }
